Put new post form in separate page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,11 +2,12 @@
 <title>Silvr</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
-  <h1>Flaskr</h1>
+  <h1>Silvr</h1>
   <div class=metanav>
   {% if not session.logged_in %}
     <a href="{{ url_for('login') }}">log in</a>
   {% else %}
+      <a href="{{ url_for('new_post') }}">New Post</a>
     <a href="{{ url_for('logout') }}">log out</a>
   {% endif %}
   </div>
