--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,12 @@
-body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
+body            { font-family: sans-serif; color:rgb(0, 102, 0); background:rgb(119, 136, 153); }
+a, h1, h2       { color: rgb(0, 102, 0); }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
 
-.page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
-                  padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
+.page           { margin: 2em auto; width: 90%; border: 5px solid #ccc;
+                  padding: 0.8em; background: rgb(255, 255, 204); }
+.entries        { list-style: none; margin: 0; padding: 0;}
 .entries li     { margin: 0.8em 1.2em; }
 .entries li h2  { margin-left: -1em; }
 .add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
