--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,8 @@ a, h1, h2       { color: rgb(0, 102, 0); }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
-h4              { font-size: 0.9em; font-style: italic; margin: 0;}
+h4              { font-size: 0.9em; font-style: italic; font-weight: normal; margin: 0;}
+h4 a            { font-style: normal }
 
 .page           { margin: 2em auto; width: 90%; border: 5px solid #ccc;
                   padding: 0.8em; background: rgb(255, 255, 204); }
