--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -2,7 +2,12 @@
 {% block body %}
   <ul class=entries>
   {% for entry in entries %}
-    <li><h2>{{ entry.title }}</h2><h4>{{ entry.posted }}</h4>{{ entry.text|safe }}
+    <li><h2>{{ entry.title }}</h2><h4>{{ entry.posted }}
+        {% if session.logged_in %}
+            <a href="{{ url_for('del_entry', entry_id = entry.id) }}"> Delete </a>
+        {% endif %}
+        </h4>{{ entry.text|safe }}
+
   {% else %}
     <li><em>No posts so far.</em>
   {% endfor %}
