--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@ h2              { font-size: 1.2em; }
 h4              { font-size: 0.9em; font-style: italic; font-weight: normal; margin: 0;}
 h4 a            { font-style: normal }
 
-.page           { margin: 2em auto; width: 90%; border: 5px solid #ccc;
+.page           { margin: 2em auto; min-width:37em; max-width:61em; width:80%; border: 5px solid #ccc;
                   padding: 0.8em; background: rgb(255, 255, 204); }
 .entries        { list-style: none; margin: 0; padding: 0;}
 .entries li     { margin: 0.8em 1.2em; }
@@ -19,3 +19,12 @@ h4 a            { font-style: normal }
                   border: 1px solid #aacbe2; }
 .error          { background: #f0d6d6; padding: 0.5em; }
 .footer         { font-size: small; font-style: italic; text-align: center;}
+
+input[type=text], input[type=password], textarea {
+    max-width: 80%;
+    outline:0;
+    border:0px solid;
+    background-color: rgb(163, 194, 255);
+    margin-bottom: 2px;
+    margin-top: 2px
+}
