--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,10 @@
   <form action="{{ url_for('login') }}" method=post>
     <dl>
       <dt>Username:
-      <dd><input type=text name=username>
+      <dd><input type=text size="25" name=username>
       <dt>Password:
-      <dd><input type=password name=password>
+      <dd><input type=password size="25" name=password>
+      <dd>
       <dd><input type=submit value=Login>
     </dl>
   </form>
