--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,19 +1,23 @@
 {% extends "layout.html" %}
 {% block body %}
 {% if session.logged_in %}
-    <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
+    {% if entry.id != 0 %}
+        <form action="{{ url_for('edit_entry', entry_id=entry.id) }}" method=post class=add-entry> EDIT
+    {% else %}
+        <form action="{{ url_for('add_entry') }}" method=post class=add-entry> ADD
+    {% endif %}
       <dl>
         <dt>Title:
-        <dd><input type=text size=30 name=title>
+        <dd><input type=text size=30 name=title value="{{ entry.title }}">
         <dt>Category:
         <dd><select name="category">
-            <option value="">No Category</option>
+            <option value="{{ entry.category }}">No Category</option>
           {% for category in categories %}
             <option value="{{ category.category }}">{{ category.category }}</option>
           {% endfor %}
         </select> <a href = {{ url_for('new_category') }}> Create Category </a>
         <dt>Text:
-        <dd><textarea name=text rows=5 cols=40></textarea>
+        <dd><textarea name=text rows=5 cols=40 value="{{ entry.text }}"></textarea>
         <dd><input type=submit value=Share>
       </dl>
     </form>
