--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -7,6 +7,7 @@
             in <a href="{{ url_for('view_category', category = entry.category) }}">{{ entry.category }}</a>.
         {% endif %}
         {% if session.logged_in %}
+            <a href="{{ url_for('edit_entry', entry_id=entry.id) }}">Edit</a> |
             <a href="{{ url_for('del_entry', entry_id = entry.id) }}"> Delete </a>
         {% endif %}
         </h4>{{ entry.text|safe }}
